<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:context=".ui.SourcePickerFragment">

        <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/onboarding_select_sources"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/select_preferred_title"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/chip_group_wrapper"
                app:layout_constraintTop_toBottomOf="@+id/select_preferred_title"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/onboarding_filter_by"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/filter_by"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/chip_group_wrapper"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toTopOf="@+id/chip_group_wrapper"/>

        <HorizontalScrollView
                android:id="@+id/chip_group_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_preferred_title"
                app:layout_constraintStart_toEndOf="@+id/filter_by"
                app:layout_constraintHorizontal_bias="0.461"
                android:layout_marginTop="8dp">

            <com.google.android.material.chip.ChipGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:id="@+id/filter_chip_group"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:singleSelection="true"
                    app:singleLine="true">

                <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_filter_category"
                        android:id="@+id/category_chip"/>

                <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_filter_language"
                        android:id="@+id/language_chip"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_wrapper"
                />

        <ViewStub
                android:id="@+id/category_container"
                android:inflatedId="@+id/category_container"
                android:layout="@layout/chip_group_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_wrapper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <ViewStub
                android:id="@+id/language_container"
                android:inflatedId="@+id/language_container"
                android:layout="@layout/chip_group_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/category_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_container"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/select_preferred_title"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/source_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/source_list_item"
                app:spanCount="2"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/language_container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>